add localised string extensions for uibutton and uilabel

--- a/Guidomia_MVP/Supporting Files/de.lproj/Localizable.strings
+++ b/Guidomia_MVP/Supporting Files/de.lproj/Localizable.strings
@@ -6,5 +6,9 @@
   
 */
 
+"pros" = "Vorteile:";
+"cons" = "Nachteile:";
+"price" = "Preis: ";
+"filters" = "Filter";
 "any_make" = "Beliebige Marke";
 "any_model" = "Beliebiges Modell";
